[workspace]
default-members = ["."]

members = ["executor/linux", "futures/linux"]

[workspace.package]
version = "0.1.0"
description = "A single-threaded async executor"
authors = ["Lance Hart <me@lancehart>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-lasync.git"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
executor.path = "executor"
executor-common.path = "executor/common"

futures.path = "futures"
futures-common.path = "futures/common"

linux.git = "https://github.com/shipsimfan/lib-linux"
uring.git = "https://github.com/shipsimfan/lib-uring"


[package]
name = "lasync"

version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
executor.workspace = true
futures.workspace = true
