[package]
name = "executor"
description = "The executor which runs futures"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
executor-common.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
executor-linux.path = "linux"

[target.'cfg(target_os = "windows")'.dependencies]
executor-windows.path = "windows"
