[package]
name = "futures"
description = "The futures used by lasync"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
futures-common.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
futures-linux.path = "linux"

[target.'cfg(target_os = "windows")'.dependencies]
futures-windows.path = "windows"
