[package]
name = "executor-linux"
description = "Executor implementation for Linux"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
executor-common.workspace = true

linux.git = "https://github.com/shipsimfan/lib-linux"
