[package]
name = "futures-linux"
description = "Futures implemented for Linux"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
futures-common.workspace = true
executor.workspace = true

linux.workspace = true
uring.workspace = true
